basic setup of home page in react

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="portfolio webiste of Pratik Sharma"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.svg" />
+    <!-- Open Graph Protocol -->
+    <meta property="og:title" content="Pratik Sharma">
+    <meta property="og:site_name" content="Pratik Sharma">
+    <meta property="og:url" content="https://pratiksharma.name.np"/>
+    <meta property="og:description" content="Pratik Sharma, Electronics and Communication Engineer. Currently involved on website development using MERN Stack.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://res.cloudinary.com/dxwnx3rgg/image/upload/v1687061347/profile-images/ff_18c521c64adaf9f0f96c413cf4c9ef3b_vsta7x.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/dxwnx3rgg/image/upload/v1687059434/profile-images/ff_eed663d3ba8d0ab08a0e9da6f97e70ac_wnug4k.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/dxwnx3rgg/image/upload/v1687163183/profile-images/ff_3a4b7696c7c2aaa7867275a46cbeeda2_f8binx.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/dxwnx3rgg/image/upload/v1684065990/frugal_fashion_logo_kg1il9.png">
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-
     <title>Pratik Sharma</title>
   </head>
   <body>
